# knowledge-mapper

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  default-config.json  dev-requirements.txt  docker-compose.yml  example_bindings.json  km-api.default.env  pyproject.toml  requirements.txt  setup.py
api/: .env  Dockerfile  manage.py  pytest.ini  requirements.txt  start.sh
api/km/: apps.py  models.py  urls.py  views.py
api/km_backend/: asgi.py  urls.py  (+2 more)
conf/: config.json  plugin-config.json  sparql-config-with-secure-km.json  sparql-config.json  sparql-kb-config.json  sparql-kb-with-authentication-and-authorization-config.json  sparql-kb-with-authentication-config.json  sparql-with-auth-config.json  sql-config.json
data-sink/: Dockerfile  app.py
data-source/: app.py  requirements.txt
data-user/: app.py
examples/: README.md  basic.py  compose.yaml  docker-compose.yml  shared.py
knowledge_mapper/: __main__.py  data_source.py  knowledge_mapper.py  sparql_source.py  sql_auth.py  sql_source.py  tke_client.py
mapper/: Dockerfile  dev-requirements.txt  requirements.txt  setup.py
src/: __init__.py  app.py  data_source.py  data_sources.py  knowledge_base.py  knowledge_interaction.py  knowledge_mapper.py  sparkel_client.py  sparql_source.py  sql_source.py  tke_client.py  wizard_mapper.py
test/: config.ttl  data.ttl  shiro.ini
tests/: fake_client.py  test_client.py  test_kb_lifespan.py  test_ki_registration.py
web/: Dockerfile  index.html  km-web.conf  package-lock.json  package.json  vite.config.js
web-app/: package-lock.json  package.json
(+84 files in other folders)
