[project]
name = "knowledge-mapper"
version = "0.1.0a0"
description = "The Knowledge Mapper makes it easier to share your data in a knowledge base to the TNO Knowledge Engine (TKE) network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "setuptools>=82.0.1",
]

# TOOLS - pytest

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q",
]


# TOOLS - ruff

[tool.ruff]
exclude = [
    ".pytest_cache",
    ".venv",
    "local",
    "./src/legacy",
    "./examples/legacy",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
